--- a/about/otzivi-page1.html
+++ b/about/otzivi-page1.html
@@ -305,7 +305,7 @@
 						</div>
 
 						<ul class="navigation" style="margin-right: 50px;">
-							<li><a href="about/kompani.html">Кто мы</a></li>
+							<li><a href="about/kompani.html">About us</a></li>
 							<!--li class="current">
 								<a href="javascript:void(0);" class="btn_nav_open">услуги <i class="arrow_nav"><img
 											src="../assets/apps/images/icons/arrow_nav.svg" loading="lazy"
@@ -333,18 +333,18 @@
 									<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 									<li><a href="personal.html">Команда</a></li>
 									<li><a href="smi.1.html">СМИ о нас</a></li>
-									<li><a href="blog.html">Блог</a></li>
-									<li><a href="otzivi@page=1.html">Отзывы</a></li>
+									<li><a href="blog.html">Blog</a></li>
+									<li><a href="otzivi@page=1.html">Feedback</a></li>
 									<li><a href="vacancy.html">Вакансии</a></li>
 									<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 									<li><a href="it-slovar.html">IT словарь</a></li>
 								</ul>
 							</li-->
-							<li><a href="../service.1.html">Компетенции</a></li>
-							<li><a href="../keysi.html">Кейсы</a></li>
-							<li><a href="otzivi-page1.html">Отзывы</a></li>
-							<li><a href="blog.html">Блог</a></li>
-							<li><a href="../contacts.html">контакты</a></li>
+							<li><a href="../service.1.html">Services</a></li>
+							<li><a href="../keysi.html">Cases</a></li>
+							<li><a href="otzivi-page1.html">Feedback</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="../contacts.html">Contact us</a></li>
 						</ul>
 
 						<div class="phones_wr flex_box hide_768">
@@ -376,7 +376,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="../service.1.html" class="nav_box_title_link">услуги</a>
+										<a href="../service.1.html" class="nav_box_title_link">Services</a>
 
 										<ul class="navigation4">
 											<li>
@@ -440,13 +440,13 @@
 
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="kompani.html" class="nav_box_title_link">Компания</a>
+										<a href="kompani.html" class="nav_box_title_link">Сompany</a>
 										<ul class="navigation5">
 											<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 											<li><a href="personal.html">Команда</a></li>
 											<li><a href="smi.1.html">СМИ о нас</a></li>
-											<li><a href="blog.html">Блог</a></li>
-											<li><a href="otzivi@page=1.html">Отзывы</a></li>
+											<li><a href="blog.html">Blog</a></li>
+											<li><a href="otzivi@page=1.html">Feedback</a></li>
 											<li><a href="vacancy.html">Вакансии</a></li>
 											<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 											<li><a href="it-slovar.html">IT словарь</a></li>
@@ -457,12 +457,12 @@
 								<div class="col-sm-4">
 									<div class="nav_box_item">
 										<div class="nav_box_title_link_wr">
-											<a href="../keysi.html" class="nav_box_title_link">Кейсы</a>
+											<a href="../keysi.html" class="nav_box_title_link">Cases</a>
 										</div>
 										<div class="nav_box_title_link_wr">
-											<a href="../contacts.html" class="nav_box_title_link">контакты</a>
+											<a href="../contacts.html" class="nav_box_title_link">Contact us</a>
 										</div>
-										<a href="../index.html#" class="nav_box_title_link">социальные сети</a>
+										<a href="../index.html#" class="nav_box_title_link">Social Network</a>
 										<ul class="navigation5">
 											<li><a rel="nofollow" target="_blank"
 													href="https://www.facebook.com/SidorinLab">Facebook</a></li>
@@ -505,7 +505,7 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Отзывы о компании TBD</h1>
+					<h1>Testimonials about TBD</h1>
 					<!--p>Депутаты, пресс&ndash;секретари, первые лица компании, <br />предприниматели, руководители</p-->
 				</div>
 			</div>
@@ -522,8 +522,8 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="kompani.html">Компания</a> &nbsp; | &nbsp; <b>Отзывы</b></div>
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
+							href="kompani.html">Company</a> &nbsp; | &nbsp; <b>Feedback</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
@@ -574,28 +574,18 @@
 							</div>
 							<div class="r">
 								<div class="h">
-									<b>Алия <br class="mobile_only">Рахимова</b>
-									<p>(директор департамента по связям с общественностью<br>и внутренним коммуникациям
-										АО "КазТрансОйл")</p>
+									<b>Aliya <br class="mobile_only">Rakhimova</b>
+									<p>(Director of the Public Relations Department
+										and internal communications of KazTransOil JSC)</p>
 								</div>
 								<div class="b">
-									<p><b>Уважаемая Жанар Арыстанбековна!</b><br>От имени АО "КазТрансОйл" выражаю
-										искреннюю благодарность и признательность за плодотворное сотрудничество с
-										коллективом компании "Turan Business Development" в рамках совместного проекта
-										"Интерактивное шоу "По городам Казахстана", представленное на международном
-										конкурсе <br>"Лучший по професии" в г.Атырау.<br><br>Нашк шоу посетили
-										руководители акимата Атырауской области, нефтегазовых компаний-партнеров,
-										национальных компаний Казахстана, России, Венгрии, Украины, Словакии, Китая. По
-										сей день мы получаем восторженные отзывы о нашем с вами совместном
-										проекте.<br><br>Стоит отметить высокий уровень профессионализма и креативность
-										вашего коллектива.<br><br>Мы верим в сохранение сложившихся деловых и дружеских
-										отношений, надеемся на дальнейшее сотрудничество.</p>
+									<p><b>Dear Zhanar Arystanbekovna!</b><br>On behalf of KazTransOil JSC, I express my sincere gratitude and appreciation for the fruitful cooperation with the staff of the Turan Business Development company within the framework of the joint project "Interactive show" In the cities of Kazakhstan "presented at the international competition <br>"Best in Profession" in Atyrau.<br><br>Our show was attended by the heads of the akimat of the Atyrau region, oil and gas partner companies, national companies of Kazakhstan, Russia, Hungary, Ukraine, Slovakia, China. To this day, we receive rave reviews about our joint project with you.<br><br>It is worth noting the high level of professionalism and creativity of your team.<br><br>We believe in the preservation of the established business and friendly relations, we look forward to further cooperation.</p>
 								</div>
 								<div class="f">
 									<div class="gonext">
 										<span><svg>
 												<use xlink:href="#arrow2"></use>
-											</svg><i>Дальше</i></span>
+											</svg><i>Forth</i></span>
 									</div>
 								</div>
 							</div>
@@ -873,16 +863,16 @@
 								<div class="col-sm-6  hide_1199">
 									<ul class="footer_nav">
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../service.1.html">Услуги</a>
+											<a href="../service.1.html">Services</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../about/kompani.html">Компания</a>
+											<a href="../about/kompani.html">Сompany</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../keysi.html">Кейсы</a>
+											<a href="../keysi.html">Cases</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../contacts.html">Контакты</a>
+											<a href="../contacts.html">Contact us</a>
 										</li>
 									</ul>
 								</div>
