--- a/about/otzivi.html
+++ b/about/otzivi.html
@@ -273,21 +273,21 @@
 						</ul>
 					</li>
 					<li>
-						<a href="javascript:void(0);" class="btn_nav_open">компания <i class="arrow_nav"><img src="../assets/apps/images/icons/arrow_nav.svg" loading="lazy" alt=""></i></a>
+						<a href="javascript:void(0);" class="btn_nav_open">Сompany <i class="arrow_nav"><img src="../assets/apps/images/icons/arrow_nav.svg" loading="lazy" alt=""></i></a>
 
 						<ul class="navigation3">
 							<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 							<li><a href="personal.html">Команда</a></li>
 							<li><a href="smi.1.html">СМИ о нас</a></li>
-							<li><a href="blog.html">Блог</a></li>
-							<li><a href="otzivi@page=1.html">Отзывы</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="otzivi@page=1.html">Feedback</a></li>
 							<li><a href="vacancy.html">Вакансии</a></li>
 							<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 							<li><a href="it-slovar.html">IT словарь</a></li>
 						</ul>
 					</li>
-					<li><a href="../keysi.html">Кейсы</a></li>
-					<li><a href="../contacts.html">контакты</a></li>
+					<li><a href="../keysi.html">Cases</a></li>
+					<li><a href="../contacts.html">Contact us</a></li>
 				</ul>
 
 				<div class="phones_wr flex_box hide_768">
@@ -382,13 +382,13 @@
 
 						<div class="col-sm-4">
 							<div class="nav_box_item">
-								<a href="kompani.html" class="nav_box_title_link">Компания</a>
+								<a href="kompani.html" class="nav_box_title_link">Сompany</a>
 								<ul class="navigation5">
 									<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 									<li><a href="personal.html">Команда</a></li>
 									<li><a href="smi.1.html">СМИ о нас</a></li>
-									<li><a href="blog.html">Блог</a></li>
-									<li><a href="otzivi@page=1.html">Отзывы</a></li>
+									<li><a href="blog.html">Blog</a></li>
+									<li><a href="otzivi@page=1.html">Feedback</a></li>
 									<li><a href="vacancy.html">Вакансии</a></li>
 									<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 									<li><a href="it-slovar.html">IT словарь</a></li>
@@ -399,12 +399,12 @@
 						<div class="col-sm-4">
 							<div class="nav_box_item">
 								<div class="nav_box_title_link_wr">
-									<a href="../keysi.html" class="nav_box_title_link">Кейсы</a>
+									<a href="../keysi.html" class="nav_box_title_link">Cases</a>
 								</div>
 								<div class="nav_box_title_link_wr">
-									<a href="../contacts.html" class="nav_box_title_link">контакты</a>
+									<a href="../contacts.html" class="nav_box_title_link">Contact us</a>
 								</div>
-								<a href="../index.html#" class="nav_box_title_link">социальные сети</a>
+								<a href="../index.html#" class="nav_box_title_link">Social Network</a>
 								<ul class="navigation5">
 																			<li><a rel="nofollow" target="_blank" href="https://www.facebook.com/SidorinLab">Facebook</a></li>
 										
@@ -459,7 +459,7 @@
 		<section class="inner_nav_block ">
 	<div class="wrapper">
 		<div class="breadcrumbs">
-	<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a href="kompani.html">Компания</a> &nbsp; | &nbsp; <b>Отзывы</b></div>	<div class="mobile_only">
+	<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a href="kompani.html">Сompany</a> &nbsp; | &nbsp; <b>Отзывы</b></div>	<div class="mobile_only">
 		<a href="../index.html">
 			<svg>
 				<use xlink:href="#angle_arrow"></use>
@@ -840,16 +840,16 @@
 						<div class="col-sm-6  hide_1199">
 							<ul class="footer_nav">
 								<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<a href="../service.1.html">Услуги</a>
+									<a href="../service.1.html">Services</a>
 								</li>
 								<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<a href="kompani.html">Компания</a>
+									<a href="kompani.html">Сompany</a>
 								</li>
 								<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<a href="../keysi.html">Кейсы</a>
+									<a href="../keysi.html">Cases</a>
 								</li>
 								<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<a href="../contacts.html">Контакты</a>
+									<a href="../contacts.html">Contact us</a>
 								</li>
 							</ul>
 						</div>
