--- a/contacts.html
+++ b/contacts.html
@@ -322,26 +322,26 @@
 								</ul>
 							</li>
 							<li>
-								<a href="javascript:void(0);" class="btn_nav_open">компания <i class="arrow_nav"><img
+								<a href="javascript:void(0);" class="btn_nav_open">Сompany <i class="arrow_nav"><img
 											src="assets/apps/images/icons/arrow_nav.svg" loading="lazy" alt=""></i></a>
 
 								<ul class="navigation3">
 									<li><a href="about/rukovodstvo-kompanii.html">Руководство</a></li>
 									<li><a href="about/personal.html">Команда</a></li>
 									<li><a href="about/smi.1.html">СМИ о нас</a></li>
-									<li><a href="about/blog.html">Блог</a></li>
-									<li><a href="about/otzivi@page=1.html">Отзывы</a></li>
+									<li><a href="about/blog.html">Blog</a></li>
+									<li><a href="about/otzivi@page=1.html">Feedback</a></li>
 									<li><a href="about/vacancy.html">Вакансии</a></li>
 									<li><a href="about/kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 									<li><a href="about/it-slovar.html">IT словарь</a></li>
 								</ul>
 							</li -->
-							<li><a href="about/kompani.html">Кто мы</a></li>
-							<li><a href="service.1.html">Компитенции</a></li>
-							<li><a href="keysi.html">Кейсы</a></li>
-							<li><a href="about/otzivi-page1.html">Отзывы</a></li>
-							<li><a href="about/blog.html">Блог</a></li>
-							<li><a href="contacts.html">контакты</a></li>
+							<li><a href="about/kompani.html">About us</a></li>
+							<li><a href="service.1.html">Services</a></li>
+							<li><a href="keysi.html">Cases</a></li>
+							<li><a href="about/otzivi-page1.html">Feedback</a></li>
+							<li><a href="about/blog.html">Blog</a></li>
+							<li><a href="contacts.html">Contact us</a></li>
 						</ul>
 
 						<div class="phones_wr flex_box hide_768">
@@ -371,7 +371,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="service.1.html" class="nav_box_title_link">услуги</a>
+										<a href="service.1.html" class="nav_box_title_link">Services</a>
 
 										<ul class="navigation4">
 											<li>
@@ -434,13 +434,13 @@
 
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="about/kompani.html" class="nav_box_title_link">Компания</a>
+										<a href="about/kompani.html" class="nav_box_title_link">Сompany</a>
 										<ul class="navigation5">
 											<li><a href="about/rukovodstvo-kompanii.html">Руководство</a></li>
 											<li><a href="about/personal.html">Команда</a></li>
 											<li><a href="about/smi.1.html">СМИ о нас</a></li>
-											<li><a href="about/blog.html">Блог</a></li>
-											<li><a href="about/otzivi@page=1.html">Отзывы</a></li>
+											<li><a href="about/blog.html">Blog</a></li>
+											<li><a href="about/otzivi@page=1.html">Feedback</a></li>
 											<li><a href="about/vacancy.html">Вакансии</a></li>
 											<li><a href="about/kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 											<li><a href="about/it-slovar.html">IT словарь</a></li>
@@ -451,12 +451,12 @@
 								<div class="col-sm-4">
 									<div class="nav_box_item">
 										<div class="nav_box_title_link_wr">
-											<a href="keysi.html" class="nav_box_title_link">Кейсы</a>
+											<a href="keysi.html" class="nav_box_title_link">Cases</a>
 										</div>
 										<div class="nav_box_title_link_wr">
-											<a href="contacts.html" class="nav_box_title_link">контакты</a>
+											<a href="contacts.html" class="nav_box_title_link">Contact us</a>
 										</div>
-										<a href="index.html#" class="nav_box_title_link">социальные сети</a>
+										<a href="index.html#" class="nav_box_title_link">Social Network</a>
 										<ul class="navigation5">
 											<li><a rel="nofollow" target="_blank"
 													href="https://www.facebook.com/SidorinLab">Facebook</a></li>
@@ -487,7 +487,7 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="index.html">Главная</a> &nbsp; | &nbsp; <b>Контакты</b></div>
+					<div class="desktop_only"><a href="index.html">Home Page</a> &nbsp; | &nbsp; <b>Contact us</b></div>
 					<div class="mobile_only">
 						<a href="index.html">
 							<svg>
@@ -503,11 +503,11 @@
 		<section class="text_page">
 			<div class="text_page__block">
 				<div class="wrapper">
-					<h1>Контакты</h1>
+					<h1>Contact us</h1>
 					<div class="contacts__main">
 						<div class="contacts__main__phone">
 							<div class="t">
-								Телефоны
+								Phones
 							</div>
 							<div class="v">
 								<a href="tel:+7 (701) 764-66-56 " class="roistat-phone2-tel"><span
@@ -526,7 +526,7 @@
 						</div-->
 						<div class="contacts__main__email2">
 							<div class="t">
-								Проектный менеджер<br>(Айжан Алиакпар)
+								Project manager<br>(Aizhan Aliakpar)
 							</div>
 							<div class="v">
 								<a href="mailto:admin@tbd.bz"><span>admin@tbd.bz</span></a>
@@ -547,13 +547,13 @@
 						<div>
 							<div class="contacts__address active" id="moscow">
 								<div class="h">
-									<span style="font-size: 0.7rem;">Офис в Нур-Султан</span>
+									<span style="font-size: 0.7rem;">Office in Nur-Sultan</span>
 									<svg>
 										<use xlink:href="#plus_circled"></use>
 									</svg>
 								</div>
 								<div class="b" style="display: block;">
-									Казахстан,<br> г. Нур-Султан, ул. Хлудова 6/1 </div>
+									Kazakhstan,<br> г. Nur-Sultan, Khludova 6/1</div>
 							</div>
 						</div>
 					</div>
@@ -564,7 +564,7 @@
 				<div class="contacts__legal__wrapper">
 					<div class="wrapper">
 						<div class="contacts__legal__item">
-							<div class="h">Реквизиты:</div>
+							<div class="h">Requisites:</div>
 							<div class="b">
 								<span>«TDB»</span>
 								<span class="sep">|</span>
@@ -576,9 +576,9 @@
 				<div class="contacts__legal__wrapper">
 					<div class="wrapper">
 						<div class="contacts__legal__item">
-							<div class="h">Директор:</div>
+							<div class="h">Director:</div>
 							<div class="b">
-								<span><br class="mobile_only">Жанар Бекбасова</span>
+								<span><br class="mobile_only">Zhanar Bekbasova</span>
 							</div>
 						</div>
 					</div>
@@ -721,16 +721,16 @@
 								<div class="col-sm-6  hide_1199">
 									<ul class="footer_nav">
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="service.1.html">Услуги</a>
+											<a href="service.1.html">Services</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="about/kompani.html">Компания</a>
+											<a href="about/kompani.html">Сompany</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="keysi.html">Кейсы</a>
+											<a href="keysi.html">Cases</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="contacts.html">Контакты</a>
+											<a href="contacts.html">Contact us</a>
 										</li>
 									</ul>
 								</div>
