--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
 							</div>
 
 							<ul class="navigation">
-								<li><a href="about/kompani.html">Кто мы</a></li>
+								<li><a href="about/kompani.html">About us</a></li>
 								<!--li>
-									<a href="javascript:void(0);" class="btn_nav_open">Кто мы<i
+									<a href="javascript:void(0);" class="btn_nav_open">About us<i
 											class="arrow_nav"><img src="assets/apps/images/icons/arrow_nav.svg"
 												loading="lazy" alt=""></i></a>
 
@@ -337,17 +337,17 @@
 										<li><a href="about/rukovodstvo-kompanii.html">Руководство</a></li>
 										<li><a href="about/personal.html">Команда</a></li>
 										<li><a href="about/smi.1.html">СМИ о нас</a></li>
-										<li><a href="about/blog.html">Блог</a></li>
-										<li><a href="about/otzivi@page=1.html">Отзывы</a></li>
+										<li><a href="about/blog.html">Blog</a></li>
+										<li><a href="about/otzivi@page=1.html">Feedback</a></li>
 										<li><a href="about/vacancy.html">Вакансии</a></li>
 										<li><a href="about/kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 										<li><a href="about/it-slovar.html">IT словарь</a></li>
 									</ul>
 								</li -->
-								<li><a href="service.1.html">Компетенции</a></li>
-								<li><a href="keysi.html">Кейсы</a></li>
-								<li><a href="about/otzivi-page1.html">Отзывы</a></li>
-								<li><a href="about/blog.html">Блог</a></li>
+								<li><a href="service.1.html">Services</a></li>
+								<li><a href="keysi.html">Cases</a></li>
+								<li><a href="about/otzivi-page1.html">Feedback</a></li>
+								<li><a href="about/blog.html">Blog</a></li>
 								<!--li class="current">
 									<a href="javascript:void(0);" class="btn_nav_open">услуги <i class="arrow_nav"><img
 												src="assets/apps/images/icons/arrow_nav.svg" loading="lazy"
@@ -366,7 +366,7 @@
 												SERM</a></li>
 									</ul>
 								</li -->
-								<li><a href="contacts.html">контакты</a></li>
+								<li><a href="contacts.html">Contact us</a></li>
 							</ul>
 
 							<div class="phones_wr flex_box hide_768">
@@ -410,56 +410,56 @@
 									</a>
 								</div>
 
-								<a href="javascript:;" class="btn_close btn_close_nav">закрыть<img
+								<a href="javascript:;" class="btn_close btn_close_nav">close<img
 										src="assets/apps/images/icons/close2.svg" loading="lazy" alt=""></a>
 
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="nav_box_item">
-											<a href="service.1.html" class="nav_box_title_link">услуги</a>
+											<a href="service.1.html" class="nav_box_title_link">Services</a>
 
 											<ul class="navigation4">
 												<li>
-													<a href="service/komun-company.html">Коммуникационные компании
+													<a href="service/komun-company.html">Communication companies
 														<i class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
 													</a>
 												</li>
 												<li>
-													<a href="service/digital-smm.html">Digital и SMM
+													<a href="service/digital-smm.html">Digital and SMM
 														<i class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
 													</a>
 												</li>
 												<li>
-													<a href="service/gr.html">Govemment relations <i class="nav_rrow">
+													<a href="service/gr.html">Government relations <i class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
 													</a>
 												</li>
 												<li>
-													<a href="service/trening.html">Тренинги <i class="nav_rrow">
+													<a href="service/trening.html">Training <i class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
 													</a>
 												</li>
 												<li>
-													<a href="service/creative-dev.html">Креативные разработки <i
+													<a href="service/creative-dev.html">Creative development <i
 															class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
 													</a>
 												</li>
 												<li>
-													<a href="service/om.html">Организация мероприятий <i class="nav_rrow">
+													<a href="service/om.html">Organization of events <i class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
 													</a>
 												</li>
 												<li>
-													<a href="service/on-m.html">Онлайн-мероприятия <i
+													<a href="service/on-m.html">Online events <i
 															class="nav_rrow">
 															<img src="assets/apps/images/icons/arrow_right.svg"
 																loading="lazy" alt="arrow_right"></i>
@@ -479,13 +479,13 @@
 
 									<div class="col-sm-4">
 										<div class="nav_box_item">
-											<a href="about/kompani.html" class="nav_box_title_link">Компания</a>
+											<a href="about/kompani.html" class="nav_box_title_link">Сompany</a>
 											<ul class="navigation5">
 												<!--li><a href="about/rukovodstvo-kompanii.html">Руководство</a></li-->
 												<!--li><a href="about/personal.html">Команда</a></li-->
 												<!--li><a href="about/smi.1.html">СМИ о нас</a></li-->
-												<li><a href="about/blog.html">Блог</a></li>
-												<li><a href="about/otzivi-page1.html">Отзывы</a></li>
+												<li><a href="about/blog.html">Blog</a></li>
+												<li><a href="about/otzivi-page1.html">Feedback</a></li>
 												<!--li><a href="about/vacancy.html">Вакансии</a></li-->
 												<!--li><a href="about/kniga-po-upravleniyu-reputacziej.html">Книга</a></li-->
 												<!--li><a href="about/it-slovar.html">IT словарь</a></li-->
@@ -496,12 +496,12 @@
 									<div class="col-sm-4">
 										<div class="nav_box_item">
 											<div class="nav_box_title_link_wr">
-												<a href="keysi.html" class="nav_box_title_link">Кейсы</a>
+												<a href="keysi.html" class="nav_box_title_link">Cases</a>
 											</div>
 											<div class="nav_box_title_link_wr">
-												<a href="contacts.html" class="nav_box_title_link">контакты</a>
+												<a href="contacts.html" class="nav_box_title_link">Contact us</a>
 											</div>
-											<a href="index.html#" class="nav_box_title_link">социальные сети</a>
+											<a href="index.html#" class="nav_box_title_link">Social Network</a>
 											<ul class="navigation5">
 												<li><a rel="nofollow" target="_blank"
 														href="https://www.facebook.com/turanbusiness/">Facebook</a></li>
@@ -641,14 +641,14 @@
 					<div class="box_item2_cont">
 						<div class="cont_lg">
 							<h3 class="title2  animated animated_slow transparent" data-animation="fadeInUp"
-								data-animation-delay="300">О компании</h3>
+								data-animation-delay="300">About company</h3>
 							<p class="color animated animated_slow transparent" data-animation="fadeInUp"
-								data-animation-delay="600">Коммуникационное агентство TBD - это территория профессионалов, готовых находить нестандартные эффективные решения.</p>
+								data-animation-delay="600">Communication agency TBD is a territory of professionals who are ready to find non-standard effective solutions.</p>
 							<p class="color animated animated_slow transparent" data-animation="fadeInUp"
-								data-animation-delay="900">У каждого из нас колоссальный практический опыт в разных отраслях PR- индустрии и маркетинга.</p>
+								data-animation-delay="900">Каждый из нас имеет большой практический опыт работы в различных сферах PR-индустрии и маркетинга.</p>
 							<p class="animated animated_slow transparent" data-animation="fadeInUp"
 								data-animation-delay="900">
-								<a href="about/kompani.html" class="btn-link"><span>Подробнее</span></a>
+								<a href="about/kompani.html" class="btn-link"><span>More</span></a>
 							</p>
 						</div>
 					</div>
@@ -711,7 +711,7 @@
 			<div class="section_item">
 				<div class="container">
 					<h3 class="title2 cont_offset_1  animated animated_slow transparent" data-animation="fadeInUp"
-						data-animation-delay="200">Мы предлагаем</h3>
+						data-animation-delay="200">We offer</h3>
 
 					<div class="vertical_tab">
 						<div class="tab_bg  animated animated_slow transparent hide_1199" data-animation="fadeInUp"
@@ -719,20 +719,20 @@
 
 						<ul class="resp-tabs-list ver_1 animated animated_slow transparent" data-animation="fadeInUp"
 							data-animation-delay="600">
-							<li>Коммуникационные кампании</li>
-							<li>Digital и SMM</li>
-							<li>Government relations</li>
-							<li>Тренинги</li>
-							<li>Креативные разработки</li>
-							<li>Организация мероприятий</li>
-							<li>Организация онлайн-мероприятий</li>
+							<li>Communication companies</li>
+							<li>Digital and SMM</li>
+							<li>Government relations</li>
+							<li>Training</li>
+							<li>Creative development</li>
+							<li>Organization of events</li>
+							<li>Organization of online events</li>
 						</ul>
 
 						<div class="resp-tabs-container blackout ver_1 animated animated_slow transparent"
 							data-animation="fadeInUp" data-animation-delay="900">
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Коммуникационные кампании</h4>
+									<h4 class="title3">Communication companies</h4>
 									<p>Коммуникационные кампании – это одно из самых интересных
 										направлений нашей деятельности. Наш опыт и знание не только
 										сферы медиа и PR, а также подкованность практически во всех
@@ -755,7 +755,7 @@
 							</div>
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Digital и SMM</h4>
+									<h4 class="title3">Digital and SMM</h4>
 									<p>Одним из частых вопросов, с которым к нам обращаются клиенты –
 										это в какой социальной сети открыть аккаунт? В ответ мы задаем
 										несколько встречных вопросов и финалом нашего диалога становится
@@ -778,7 +778,7 @@
 							</div>
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Government relations</h4>
+									<h4 class="title3">Government relations</h4>
 									<p>Мы помогаем выстраивать эффективные коммуникации с компанией-
 										заказчиком и государственными органами как республиканского, так и
 										местного уровня. Наши менеджеры, а также привлеченные
@@ -795,7 +795,7 @@
 							</div>
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Тренинги</h4>
+									<h4 class="title3">Training</h4>
 									<p>Команда TBD накопила большой практический опыт в выстраивании
 										коммуникаций разного уровня, этими навыками и знаниями мы готовы
 										делиться с нашими слушателями. Никакой воды и занудной теории,
@@ -815,7 +815,7 @@
 							</div>
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Креативные разработки</h4>
+									<h4 class="title3">Creative development</h4>
 									<p>Мы держим руку на пульсе, постоянно изучаем последние тренды и
 										технологии, чтобы сделать коммуникации наших клиентов еще более
 										оригинальными и эффективными. В нашем арсенале большой выбор
@@ -831,7 +831,7 @@
 							</div>
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Организация мероприятий</h4>
+									<h4 class="title3">Organization of events</h4>
 									<p>Деловые мероприятия – это то, с чего мы начинали. Наше мастерство
 										и профессиональный подход вызвал доверие со стороны клиентов,
 										они стали сами предлагать нам организовать для них PR-кампании.
@@ -850,7 +850,7 @@
 							</div>
 							<div>
 								<div class="cont_offset_1">
-									<h4 class="title3">Организация онлайн-мероприятий</h4>
+									<h4 class="title3">Organization of online events</h4>
 									<p>Пандемия внесла большие коррективы в планы многих компаний,
 										наиболее уязвимой оказалась сфера организации оффлайн-
 										мероприятий. Но мы не отчаялись и разработали пакеты услуг по
@@ -1111,7 +1111,7 @@
 						<div class="row cont_offset_1">
 							<div class="col-md-4 col-lg-7">
 								<h3 class="title2 text-c-w animated animated_slow transparent" data-animation="fadeInUp"
-									data-animation-delay="300" style="color: #ffffff;">Кейсы</h3>
+									data-animation-delay="300" style="color: #ffffff;">Cases</h3>
 							</div>
 							<div class="col-md-8 col-lg-5">
 								<div class="place_box2 flex_box animated animated_slow transparent"
@@ -1201,7 +1201,7 @@
 			<div class="section_item">
 				<div class="container">
 					<h3 class="title2 animated animated_slow transparent" data-animation="fadeInUp"
-						data-animation-delay="300">Отзывы</h3>
+						data-animation-delay="300">Feedback</h3>
 
 					<div class="box_item7_wr">
 						<div class="box_item7 animated animated_slow transparent" data-animation="fadeInDown"
@@ -1369,16 +1369,16 @@
 								<div class="col-sm-6  hide_1199">
 									<ul class="footer_nav">
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="service.1.html">Услуги</a>
+											<a href="service.1.html">Services</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="about/kompani.html">Компания</a>
+											<a href="about/kompani.html">Сompany</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="keysi.html">Кейсы</a>
+											<a href="keysi.html">Cases</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="contacts.html">Контакты</a>
+											<a href="contacts.html">Contact us</a>
 										</li>
 									</ul>
 								</div>
