--- a/service/creative-dev.html
+++ b/service/creative-dev.html
@@ -319,26 +319,26 @@
 								</ul>
 							</li-->
 							<!--li>
-								<a href="javascript:void(0);" class="btn_nav_open">компания <i class="arrow_nav"><img
+								<a href="javascript:void(0);" class="btn_nav_open">Сompany <i class="arrow_nav"><img
 											src="assets/apps/images/icons/arrow_nav.svg" loading="lazy" alt=""></i></a>
 
 								<ul class="navigation3">
 									<li><a href="about/rukovodstvo-kompanii.html">Руководство</a></li>
 									<li><a href="about/personal.html">Команда</a></li>
 									<li><a href="about/smi.1.html">СМИ о нас</a></li>
-									<li><a href="about/blog.html">Блог</a></li>
-									<li><a href="about/otzivi@page=1.html">Отзывы</a></li>
+									<li><a href="about/blog.html">Blog</a></li>
+									<li><a href="about/otzivi@page=1.html">Feedback</a></li>
 									<li><a href="about/vacancy.html">Вакансии</a></li>
 									<li><a href="about/kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 									<li><a href="about/it-slovar.html">IT словарь</a></li>
 								</ul>
 							</li-->
-							<li><a href="../about/kompani.html">Кто мы</a></li>
-							<li><a href="../service.1.html">Компетенции</a></li>
-							<li><a href="../keysi.html">Кейсы</a></li>
-							<li><a href="../about/otzivi-page1.html">Отзывы</a></li>
-							<li><a href="../about/blog.html">Блог</a></li>
-							<li><a href="../contacts.html">контакты</a></li>
+							<li><a href="../about/kompani.html">About us</a></li>
+							<li><a href="../service.1.html">Services</a></li>
+							<li><a href="../keysi.html">Cases</a></li>
+							<li><a href="../about/otzivi-page1.html">Feedback</a></li>
+							<li><a href="../about/blog.html">Blog</a></li>
+							<li><a href="../contacts.html">Contact us</a></li>
 						</ul>
 
 						<div class="phones_wr flex_box hide_768">
@@ -368,7 +368,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="service.1.html" class="nav_box_title_link">услуги</a>
+										<a href="service.1.html" class="nav_box_title_link">Services</a>
 
 										<ul class="navigation4">
 											<li>
@@ -431,13 +431,13 @@
 
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="about/kompani.html" class="nav_box_title_link">Компания</a>
+										<a href="about/kompani.html" class="nav_box_title_link">Сompany</a>
 										<ul class="navigation5">
 											<li><a href="about/rukovodstvo-kompanii.html">Руководство</a></li>
 											<li><a href="about/personal.html">Команда</a></li>
 											<li><a href="about/smi.1.html">СМИ о нас</a></li>
-											<li><a href="about/blog.html">Блог</a></li>
-											<li><a href="about/otzivi@page=1.html">Отзывы</a></li>
+											<li><a href="about/blog.html">Blog</a></li>
+											<li><a href="about/otzivi@page=1.html">Feedback</a></li>
 											<li><a href="about/vacancy.html">Вакансии</a></li>
 											<li><a href="about/kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 											<li><a href="about/it-slovar.html">IT словарь</a></li>
@@ -448,12 +448,12 @@
 								<div class="col-sm-4">
 									<div class="nav_box_item">
 										<div class="nav_box_title_link_wr">
-											<a href="keysi.html" class="nav_box_title_link">Кейсы</a>
+											<a href="keysi.html" class="nav_box_title_link">Cases</a>
 										</div>
 										<div class="nav_box_title_link_wr">
-											<a href="contacts.html" class="nav_box_title_link">контакты</a>
+											<a href="contacts.html" class="nav_box_title_link">Contact us</a>
 										</div>
-										<a href="index.html#" class="nav_box_title_link">социальные сети</a>
+										<a href="index.html#" class="nav_box_title_link">Social Network</a>
 										<ul class="navigation5">
 											<li><a rel="nofollow" target="_blank"
 													href="https://www.facebook.com/SidorinLab">Facebook</a></li>
@@ -514,7 +514,7 @@
 			<div class="wrapper">
 				<div class="breadcrumbs">
 					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Услуги</a> &nbsp; | &nbsp; <b>Креативные разработки</b></div>
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Креативные разработки</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
@@ -716,16 +716,16 @@
 								<div class="col-sm-6  hide_1199">
 									<ul class="footer_nav">
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../service.1.html">Услуги</a>
+											<a href="../service.1.html">Services</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../about/kompani.html">Компания</a>
+											<a href="../about/kompani.html">Сompany</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../keysi.html">Кейсы</a>
+											<a href="../keysi.html">Cases</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../contacts.html">Контакты</a>
+											<a href="../contacts.html">Contact us</a>
 										</li>
 									</ul>
 								</div>
