--- a/about/blog.html
+++ b/about/blog.html
@@ -320,7 +320,7 @@
 								</ul>
 							</li -->
 							<!--li>
-								<a href="javascript:void(0);" class="btn_nav_open">компания <i class="arrow_nav"><img
+								<a href="javascript:void(0);" class="btn_nav_open">Сompany <i class="arrow_nav"><img
 											src="../assets/apps/images/icons/arrow_nav.svg" loading="lazy"
 											alt=""></i></a>
 
@@ -328,19 +328,19 @@
 									<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 									<li><a href="personal.html">Команда</a></li>
 									<li><a href="smi.1.html">СМИ о нас</a></li>
-									<li><a href="blog.html">Блог</a></li>
-									<li><a href="otzivi@page=1.html">Отзывы</a></li>
+									<li><a href="blog.html">Blog</a></li>
+									<li><a href="otzivi@page=1.html">Feedback</a></li>
 									<li><a href="vacancy.html">Вакансии</a></li>
 									<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 									<li><a href="it-slovar.html">IT словарь</a></li>
 								</ul>
 							</li-->
-							<li><a href="../about/kompani.html">Кто мы</a></li>
-							<li><a href="../service.1.html">Компетенции</a></li>
-							<li><a href="../keysi.html">Кейсы</a></li>
-							<li><a href="../about/otzivi-page1.html">Отзывы</a></li>
-							<li><a href="blog.html">Блог</a></li>
-							<li><a href="../contacts.html">контакты</a></li>
+							<li><a href="../about/kompani.html">About us</a></li>
+							<li><a href="../service.1.html">Services</a></li>
+							<li><a href="../keysi.html">Cases</a></li>
+							<li><a href="../about/otzivi-page1.html">Feedback</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="../contacts.html">Contact us</a></li>
 						</ul>
 
 						<div class="phones_wr flex_box hide_768">
@@ -371,7 +371,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="../service.1.html" class="nav_box_title_link">услуги</a>
+										<a href="../service.1.html" class="nav_box_title_link">Services</a>
 
 										<ul class="navigation4">
 											<li>
@@ -435,13 +435,13 @@
 
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="kompani.html" class="nav_box_title_link">Компания</a>
+										<a href="kompani.html" class="nav_box_title_link">Сompany</a>
 										<ul class="navigation5">
 											<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 											<li><a href="personal.html">Команда</a></li>
 											<li><a href="smi.1.html">СМИ о нас</a></li>
-											<li><a href="blog.html">Блог</a></li>
-											<li><a href="otzivi@page=1.html">Отзывы</a></li>
+											<li><a href="blog.html">Blog</a></li>
+											<li><a href="otzivi@page=1.html">Feedback</a></li>
 											<li><a href="vacancy.html">Вакансии</a></li>
 											<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 											<li><a href="it-slovar.html">IT словарь</a></li>
@@ -452,12 +452,12 @@
 								<div class="col-sm-4">
 									<div class="nav_box_item">
 										<div class="nav_box_title_link_wr">
-											<a href="../keysi.html" class="nav_box_title_link">Кейсы</a>
+											<a href="../keysi.html" class="nav_box_title_link">Cases</a>
 										</div>
 										<div class="nav_box_title_link_wr">
-											<a href="../contacts.html" class="nav_box_title_link">контакты</a>
+											<a href="../contacts.html" class="nav_box_title_link">Contact us</a>
 										</div>
-										<a href="../index.html#" class="nav_box_title_link">социальные сети</a>
+										<a href="../index.html#" class="nav_box_title_link">Social Network</a>
 										<ul class="navigation5">
 											<li><a rel="nofollow" target="_blank"
 													href="https://www.facebook.com/SidorinLab">Facebook</a></li>
@@ -489,8 +489,8 @@
 		<section class="blog b2w" id="pdopage">
 			<div class="wrapper">
 				<div class="blog_filter_links">
-					<a href="../index.html#" class="active" data-sort-by="publishedon">Новые</a>
-					<a href="../index.html#" data-sort-by="HitsPage">Популярные</a>
+					<a href="../index.html#" class="active" data-sort-by="publishedon">New</a>
+					<a href="../index.html#" data-sort-by="HitsPage">Popular</a>
 				</div>
 
 				<div class="blog_desktop_columns -desktop_only rows ajax-container">
@@ -498,7 +498,7 @@
 					<div class="blog_list_item ajax-item " data-id="230">
 						<div class="blog_item">
 							<div class="blog_item__tag">
-								<span style="background: #;">Блог TDB</span>
+								<span style="background: #;">Blog TDB</span>
 							</div>
 							<div class="blog_item__picture">
 								<a href="blog/blog1.html">
@@ -516,7 +516,7 @@
 							</div>
 							<div class="blog_item__texts">
 								<div class="h likeh2">
-									<a href="blog/blog1.html">Здравствуйте, дорогие читатели!</a>
+									<a href="blog/blog1.html">Hello dear readers!</a>
 								</div>
 							</div>
 							<div class="blog_item__params">
@@ -525,7 +525,7 @@
 										<use xlink:href="#time"></use>
 									</svg>
 									<span>
-										15 Августа 2020 </span>
+										15 August 2020 </span>
 								</div>
 								<div class="views">
 									<svg>
@@ -1117,16 +1117,16 @@
 								<div class="col-sm-6  hide_1199">
 									<ul class="footer_nav">
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../service.1.html">Услуги</a>
+											<a href="../service.1.html">Services</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../about/kompani.html">Компания</a>
+											<a href="../about/kompani.html">Сompany</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../keysi.html">Кейсы</a>
+											<a href="../keysi.html">Cases</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../contacts.html">Контакты</a>
+											<a href="../contacts.html">Contact us</a>
 										</li>
 									</ul>
 								</div>
