--- a/about/kompani.html
+++ b/about/kompani.html
@@ -301,7 +301,7 @@
 						</div>
 
 						<ul class="navigation" style="margin-right: 50px;">
-							<li><a href="kompani.html">Кто мы</a></li>
+							<li><a href="kompani.html">About us</a></li>
 							<!--li class="current">
 								<a href="javascript:void(0);" class="btn_nav_open">услуги <i class="arrow_nav"><img
 											src="../assets/apps/images/icons/arrow_nav.svg" loading="lazy"
@@ -321,7 +321,7 @@
 								</ul>
 							</li-->
 							<!--li>
-								<a href="javascript:void(0);" class="btn_nav_open">компания <i class="arrow_nav"><img
+								<a href="javascript:void(0);" class="btn_nav_open">Сompany <i class="arrow_nav"><img
 											src="../assets/apps/images/icons/arrow_nav.svg" loading="lazy"
 											alt=""></i></a>
 
@@ -329,19 +329,19 @@
 									<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 									<li><a href="personal.html">Команда</a></li>
 									<li><a href="smi.1.html">СМИ о нас</a></li>
-									<li><a href="blog.html">Блог</a></li>
-									<li><a href="otzivi@page=1.html">Отзывы</a></li>
+									<li><a href="blog.html">Blog</a></li>
+									<li><a href="otzivi@page=1.html">Feedback</a></li>
 									<li><a href="vacancy.html">Вакансии</a></li>
 									<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 									<li><a href="it-slovar.html">IT словарь</a></li>
 								</ul>
 							</li-->
 
-							<li><a href="../service.1.html">Компетенции</a></li>
-							<li><a href="../keysi.html">Кейсы</a></li>
-							<li><a href="otzivi-page1.html">Отзывы</a></li>
-							<li><a href="../about/blog.html">Блог</a></li>
-							<li><a href="../contacts.html">контакты</a></li>
+							<li><a href="../service.1.html">Services</a></li>
+							<li><a href="../keysi.html">Cases</a></li>
+							<li><a href="otzivi-page1.html">Feedback</a></li>
+							<li><a href="../about/blog.html">Blog</a></li>
+							<li><a href="../contacts.html">Contact us</a></li>
 						</ul>
 
 						<div class="phones_wr flex_box hide_768">
@@ -371,7 +371,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="../service.1.html" class="nav_box_title_link">услуги</a>
+										<a href="../service.1.html" class="nav_box_title_link">Services</a>
 
 										<ul class="navigation4">
 											<li>
@@ -435,13 +435,13 @@
 
 								<div class="col-sm-4">
 									<div class="nav_box_item">
-										<a href="kompani.html" class="nav_box_title_link">Компания</a>
+										<a href="kompani.html" class="nav_box_title_link">Сompany</a>
 										<ul class="navigation5">
 											<li><a href="rukovodstvo-kompanii.html">Руководство</a></li>
 											<li><a href="personal.html">Команда</a></li>
 											<li><a href="smi.1.html">СМИ о нас</a></li>
-											<li><a href="blog.html">Блог</a></li>
-											<li><a href="otzivi@page=1.html">Отзывы</a></li>
+											<li><a href="blog.html">Blog</a></li>
+											<li><a href="otzivi@page=1.html">Feedback</a></li>
 											<li><a href="vacancy.html">Вакансии</a></li>
 											<li><a href="kniga-po-upravleniyu-reputacziej.html">Книга</a></li>
 											<li><a href="it-slovar.html">IT словарь</a></li>
@@ -452,12 +452,12 @@
 								<div class="col-sm-4">
 									<div class="nav_box_item">
 										<div class="nav_box_title_link_wr">
-											<a href="../keysi.html" class="nav_box_title_link">Кейсы</a>
+											<a href="../keysi.html" class="nav_box_title_link">Cases</a>
 										</div>
 										<div class="nav_box_title_link_wr">
-											<a href="../contacts.html" class="nav_box_title_link">контакты</a>
+											<a href="../contacts.html" class="nav_box_title_link">Contact us</a>
 										</div>
-										<a href="../index.html#" class="nav_box_title_link">социальные сети</a>
+										<a href="../index.html#" class="nav_box_title_link">Social Network</a>
 										<ul class="navigation5">
 											<li><a rel="nofollow" target="_blank"
 													href="https://www.facebook.com/SidorinLab">Facebook</a></li>
@@ -511,42 +511,20 @@
 			<div class="text_page__block uslugi_maintext">
 				<div class="wrapper">
 					<div class="inner_first_block__title pt">
-						<h1 style="color: #1d1d1d;">О компании</h1>
-						<p class="text-max-width">Коммуникационное агентство TBD - это территория
-							профессионалов, готовых находить нестандартные эффективные решения. У каждого из нас
-							колоссальный практический опыт в разных отраслях PR- индустрии и маркетинга.</p>
-						<p>Как мы работаем?</p>
-						<p class="text-max-width">Запросы клиентов мы рассматриваем индивидуально
-							и подбираем приемлемый пакет услуг. На период действия
-							контракта TBD становится частью команды клиента, но при этом
-							не насаждает свое мнение, не диктует условия, а представляет спектр
-							возможных решений.</p>
-						<p class="text-max-width">Мы профессионалы в коммуникациях, поэтому наше сотрудничество
-							начнется с эффективного диалога, построения конструктивной
-							стратегии и завершится максимально высоким результатом.</p>
+						<h1 style="color: #1d1d1d;">About company</h1>
+						<p class="text-max-width">Communication agency TBD is a territory of professionals who are ready to find non-standard effective solutions. Each of us has a great practical experience in various areas of PR-industry and marketing.</p>
+						<p>How do we work?</p>
+						<p class="text-max-width">We review each customer inquiry individually and select an acceptable service package. During the term of the Agreement TBD becomes part of the client's team. We do not impose our opinion or put any conditions, only represent a range of possible solutions.</p>
+						<p class="text-max-width">We are professionals in communications; therefore, our cooperation will begin with an effective dialogue, the construction of an effective strategy and will finish with the best possible result.</p>
 
-						<h1 style="color: #1d1d1d;">Партнеры TBD</h1>
-						<p class="text-max-width">Постоянными партнерами TBD в организации отраслевых
-							индустриальных событий является ОО «Казахстанское общество
-							нефтяников-геологов». Совместно с КОНГ мы провели два Форума
-							для геологов в г.Нур-Султан, которые стали одними из наиболее
-							ожидаемых мероприятий в нефтегазовой отрасли. Также мы
-							организовывали обучающие семинары для нефтяников-геологов в
-							регионах Казахстана на актуальные темы.</p>
-						<p><a href="http://kong.kz/" target="_blank">Перейти на сайт партнера >>></a></p>
-						<p class="text-max-width">С компанией   &quot;4 ИЗМЕРЕНИЕ&quot;, г. Минск мы реализовываем самые
-							смелые креативные идеи. В 2019 году нам удалось создать
-							интерактивное шоу «По городам Казахстана» для компании
-							«КазТрансОйл». Для визуализации интересного сценария мы
-							использовали элементы 3D и другие подходы светопроекции. Этот
-							проект получил первое место в номинации «Лучший зарубежный
-							проект» на конкурсе Russian Event Awards 2019.</p>
-						<p><a href="www.4d-show.com" target="_blank">Перейти на сайт партнера >>></a></p>
+						<h1 style="color: #1d1d1d;">TBD Partners</h1>
+						<p class="text-max-width">Regular TBD partners in the organization of industry events are JSC "Kazakhstan Society of Petroleum Geologists". Together with KONG, we held two forums for geologists in the city of Nur-Sultan, which became one of the most anticipated events in the oil and gas industry. We also organized training seminars for oil and geologists in the regions of Kazakhstan on topical issues.</p>
+						<p><a href="http://kong.kz/" target="_blank">Go to the partner site >>></a></p>
+						<p class="text-max-width">With the company "4 MEASURES", Minsk we realize the brightest creative ideas. In 2019, we managed to create an interactive show "In the cities of Kazakhstan" for the company "KazTransOil". To visualize the interesting scenario, we used 3D elements and other approaches of light projection. This project won the first place in the nomination - "Best Foreign Project" at the Russian Event Awards 2019.</p>
+						<p><a href="www.4d-show.com" target="_blank">Go to the partner site >>></a></p>
 
-						<h1 style="color: #1d1d1d;">Библиотека</h1>
-						<p class="text-max-width">В библиотеке TBD вы найдете статьи и книги по темам PR,
-							организация мероприятий, маркетинг, SMM и многому другому, что
-							может быть полезно для специалистов в области Public Relations.</p>
+						<h1 style="color: #1d1d1d;">Library</h1>
+						<p class="text-max-width">In the TBD library you will find articles and books on PR, organization of events, marketing, SMM and many other things that may be useful for specialists in the field of Public Relations.</p>
 					</div>
 				</div>
 			</div>
@@ -687,16 +665,16 @@
 								<div class="col-sm-6  hide_1199">
 									<ul class="footer_nav">
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../service.1.html">Услуги</a>
+											<a href="../service.1.html">Services</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../about/kompani.html">Компания</a>
+											<a href="../about/kompani.html">Сompany</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../keysi.html">Кейсы</a>
+											<a href="../keysi.html">Cases</a>
 										</li>
 										<li itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<a href="../contacts.html">Контакты</a>
+											<a href="../contacts.html">Contact us</a>
 										</li>
 									</ul>
 								</div>
